# driftguard

./: .env.example  .gitignore  README.md  nixpacks.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  run.sh  test_engine.py
.github/workflows/: ci.yml
backend/: database.py
backend/api/: main.py
backend/core/: auth.py
backend/engines/: drift.py
backend/integrations/: aws_auth.py  github_pr.py  s3_state.py
backend/models/: base.py  models.py
backend/tests/: test_aws_auth.py  test_cors.py  test_drift_engine.py  test_github_pr.py
cli/: README.md  pyproject.toml
cli/driftguard_cli/: __init__.py  client.py  config.py  main.py
cli/tests/: test_client.py
demo/: index.html
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  smoke_test.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: DriftDiff.tsx  Footer.tsx  Gauge.tsx  Nav.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: api.ts  extension.ts  findingsProvider.ts
