[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftguard-cli"
version = "0.1.0"
description = "CLI for DriftGuard — Terraform drift detection and remediation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Edwin Jonathan Chibuike" }]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
driftguard = "driftguard_cli.main:app"

[project.urls]
Homepage = "https://github.com/EdwinJdevops/driftguard"
Repository = "https://github.com/EdwinJdevops/driftguard"

[tool.setuptools.packages.find]
include = ["driftguard_cli*"]
